using System.Collections.Generic;

namespace _SlimeCatch.Save
{
    public interface ILoadController
    {
        List<bool> GetStageClearList();
    }
}