namespace _SlimeCatch.Save
{
    public interface ISaveController
    {
        void Save(int stageNo,bool isClear);
    }
}