@startuml
'https://plantuml.com/class-diagram

namespace SelectStage{
 
    class ConnectStageAnimation
    class SelectStageManager
    class StageIconView
    class AudioController
    
    SelectStageManager ..> AudioController
    SelectStageManager ..> StageIconView
}

namespace Save{
    class SaveHandler
    class SaveLoadController
    interface ILoadController
    interface ISaveController
    
    SaveLoadController ..> SaveHandler
    
    ILoadController <|-- SaveLoadController
    ISaveController <|-- SaveLoadController
}

Save.SaveLoadController ..> GameAnimal.SaveHandler
SelectStage.SelectStageManager ...> Save.ILoadController

namespace GameAnimal{
    class SaveHandler
    note right: ゲームアニマールのセーブプラグイン
}

@enduml